force-app/main/default/objects/Contract/fields/MP_AutoNum_Contract__c.field-meta.xml
<CustomField>
    <fullName>MP_AutoNum_Contract__c</fullName>
    <label>MP AutoNum Contract</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>