force-app/main/default/objects/Contract/fields/MPActualDepartureDate__c.field-meta.xml
<CustomField>
    <fullName>MPActualDepartureDate__c</fullName>
    <description>Campo para ingresar la fecha de salida real contra la cual se realizarán los cálculos de deuda del contrato para su proceso de término de contrato.</description>
    <label>Fecha real de salida</label>
    <type>Date</type>
</CustomField>