force-app/main/default/objects/Contract/fields/MPContractActivationStatus__c.field-meta.xml
<CustomField>
    <fullName>MPContractActivationStatus__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Detalles API Activación de contrato</label>
    <referenceTo>MPIntegrationStatus__c</referenceTo>
    <relationshipLabel>Contracts (Detalles API Activación de contrato)</relationshipLabel>
    <relationshipName>MPContractActivation</relationshipName>
    <type>Lookup</type>
</CustomField>