force-app/main/default/objects/Contract/fields/MPContractCreation40Status__c.field-meta.xml
<CustomField>
    <fullName>MPContractCreation40Status__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Detalles API Creación de Contratos 4.0</label>
    <referenceTo>MPIntegrationStatus__c</referenceTo>
    <relationshipLabel>Contracts (Detalles API Creación de Contratos 4.0)</relationshipLabel>
    <relationshipName>Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>