force-app/main/default/objects/Contract/fields/MPContractDatesUpdateStatus__c.field-meta.xml
<CustomField>
    <fullName>MPContractDatesUpdateStatus__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Detalles Api Actualización de Fechas</label>
    <referenceTo>MPIntegrationStatus__c</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>