force-app/main/default/objects/Contract/fields/MPContractModificationStatus__c.field-meta.xml
<CustomField>
    <fullName>MPContractModificationStatus__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Detalles API Modificación de Contrato</label>
    <referenceTo>MPIntegrationStatus__c</referenceTo>
    <relationshipLabel>Contracts (Detalles API Modificación de Contrato)</relationshipLabel>
    <relationshipName>Contracts_MPContractModificationStatus</relationshipName>
    <type>Lookup</type>
</CustomField>