force-app/main/default/objects/Contract/fields/MPCurrentOrder__c.field-meta.xml
<CustomField>
    <fullName>MPCurrentOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pedido Vigente</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>