force-app/main/default/objects/Contract/fields/MPDateValidated__c.field-meta.xml
<CustomField>
    <fullName>MPDateValidated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica que la fecha de salida real ingresada está confirmada por el SSCC y por el JC para proceder con los cálculos de la deuda del contrato.</description>
    <label>Fecha validada</label>
    <type>Checkbox</type>
</CustomField>