force-app/main/default/objects/Contract/fields/MPEndDate__c.field-meta.xml
<CustomField>
    <fullName>MPEndDate__c</fullName>
    <label>Fecha Fin de Contrato</label>
    <type>Date</type>
</CustomField>