force-app/main/default/objects/Contract/fields/MPIsCreatedByFlow__c.field-meta.xml
<CustomField>
    <fullName>MPIsCreatedByFlow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo creado para saber si un contrato fue creado por el el flujo Creaci_n_de_Contrato_y_Valido_Firma o fue creado mediante inserción masiva</description>
    <label>Es Creado Por Flujo</label>
    <type>Checkbox</type>
</CustomField>