force-app/main/default/objects/Contract/fields/MPOpportunity__c.field-meta.xml
<CustomField>
    <fullName>MPOpportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Indica que oportunidad generó el contrato</inlineHelpText>
    <label>Oportunidad de origen</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Contratos</relationshipLabel>
    <relationshipName>Contratos</relationshipName>
    <type>Lookup</type>
</CustomField>