force-app/main/default/objects/Contract/fields/MPRentalStartDate__c.field-meta.xml
<CustomField>
    <fullName>MPRentalStartDate__c</fullName>
    <label>Fecha de inicio de renta</label>
    <type>Date</type>
</CustomField>