force-app/main/default/objects/Contract/fields/MPStatus__c.field-meta.xml
<CustomField>
    <fullName>MPStatus__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Borrador</fullName>
            </value>
            <value>
                <fullName>En Proceso de Activación</fullName>
            </value>
            <value>
                <fullName>Activo</fullName>
            </value>
            <value>
                <fullName>Rescindido</fullName>
            </value>
            <value>
                <fullName>Terminado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>