force-app/main/default/objects/Contract/fields/MPTentativeDepartureDate__c.field-meta.xml
<CustomField>
    <fullName>MPTentativeDepartureDate__c</fullName>
    <description>Fecha en la que el SSCC desea realizar su salida</description>
    <inlineHelpText>Fecha de salida estimada por el SSCC</inlineHelpText>
    <label>Fecha tentativa de salida</label>
    <type>Date</type>
</CustomField>