force-app/main/default/objects/Contract/validationRules/VRCONTR_003_MPContractControl.validationRule-meta.xml
<ValidationRule>
    <fullName>VRCONTR_003_MPContractControl</fullName>
    <active>true</active>
    <errorConditionFormula>!($Profile.Name = &quot;System Administrator&quot;) &amp;&amp;
!($Profile.Name = &quot;Administrador del sistema&quot;) &amp;&amp;
!ISNEW() &amp;&amp; 
(
   ISCHANGED( OwnerId ) ||
   ISCHANGED(  AccountId )
)</errorConditionFormula>
    <errorMessage>No es posible modificar estos campos en el contrato (VRCONTR_003)</errorMessage>
</ValidationRule>