force-app/main/default/objects/Contract/listViews/AllActivatedContracts.listView-meta.xml
<ListView>
    <fullName>AllActivatedContracts</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>MPStatus__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MPStatus__c</field>
        <operation>equals</operation>
        <value>Activo</value>
    </filters>
    <label>Todos los contratos activados</label>
</ListView>